mule-user-guide/v/3.4/general-configuration-reference.adoc
= General Configuration Reference

Mule provides Javadoc-style schema documentation, making it easier to familiarize yourself with all the elements and attributes permissible in XML configuration files.

[cols="2*"]
|===
a|
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/bpm-configuration-reference[BPM Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/global-settings-configuration-reference[Global Settings Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/endpoint-configuration-reference[Endpoint Configuration Reference]

a|
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/filters-configuration-reference[Filters Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/transformers-configuration-reference[Transformers Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/component-configuration-reference[Component Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/entry-point-resolver-configuration-reference[Entry Point Resolver Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/exception-strategy-configuration-reference[Exception Strategy Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/properties-configuration-reference[Properties Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/notifications-configuration-reference[Notifications Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/transactions-configuration-reference[Transactions Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/non-mel-expressions-configuration-reference[Non-MEL Expressions Configuration Reference]
* link:https://docs.mulesoft.com/mule-user-guide/v/3.4/security-manager-configuration-reference[Security Manager Configuration Reference]

|===

For configuration reference on transports, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/transports-reference[Transports Reference]. For modules, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/modules-reference[Modules Reference].

For transports and modules contributed by the community, see link:https://www.mulesoft.com/exchange#!/?types=connector&sortBy=name[Anypoint Exchange].

