mule-user-guide/v/3.5/general-configuration-reference.adoc
= General Configuration Reference

Mule provides Javadoc-style http://www.mulesoft.org/docs/site/current3/schemadocs/[schema documentation], making it easier to familiarize yourself with all the elements and attributes permissible in XML configuration files.

[width="100%",cols="2"]
|===
a|
* link:/mule-user-guide/v/3.5/bpm-configuration-reference[BPM Configuration Reference]
* link:/mule-user-guide/v/3.5/global-settings-configuration-reference[Global Settings Configuration Reference]
* link:/mule-user-guide/v/3.5/endpoint-configuration-reference[Endpoint Configuration Reference]

a|
* link:/mule-user-guide/v/3.5/filters-configuration-reference[Filters Configuration Reference]
* link:/mule-user-guide/v/3.5/transformers-configuration-reference[Transformers Configuration Reference]
* link:/mule-user-guide/v/3.5/component-configuration-reference[Component Configuration Reference]
* link:/mule-user-guide/v/3.5/entry-point-resolver-configuration-reference[Entry Point Resolver Configuration Reference]
* link:/mule-user-guide/v/3.5/exception-strategy-configuration-reference[Exception Strategy Configuration Reference]
* link:/mule-user-guide/v/3.5/properties-configuration-reference[Properties Configuration Reference]
* link:/mule-user-guide/v/3.5/notifications-configuration-reference[Notifications Configuration Reference]
* link:/mule-user-guide/v/3.5/transactions-configuration-reference[Transactions Configuration Reference]
* link:/mule-user-guide/v/3.5/non-mel-expressions-configuration-reference[Non-MEL Expressions Configuration Reference]
* link:/mule-user-guide/v/3.5/security-manager-configuration-reference[Security Manager Configuration Reference]

|===

For configuration reference on transports, see link:/mule-user-guide/v/3.5/transports-reference[Transports Reference]. For modules, see link:/mule-user-guide/v/3.5/modules-reference[Modules Reference].

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
